# videodiff

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
examples/: extract_frames.rs
src/: gui.rs  main.rs
