[package]
name = "videodiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
average = "0.13.1"
clap = "4.0.32"
embedded-graphics = "0.7.1"
rand = "0.8.5"
tinytga = "0.4.1"
xshell = "0.2.3"

[profile.release]
lto = true
