[package]
name = "videodiff"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "videodiff"
path = "src/main.rs"

[[bin]]
name = "videodiff-gui"
path = "src/gui.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
average = "0.13.1"
clap = "4.0.32"
embedded-graphics = "0.7.1"
rand = "0.8.5"
tinytga = "0.4.1"
xshell = "0.2.3"
eframe = "0.27"
egui = "0.27"
rfd = "0.14"
crossbeam-channel = "0.5"

[profile.release]
lto = true
